--- a/style.css
+++ b/style.css
@@ -1,18 +1,59 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@keyframes animationBox2 {
+    0%{
+        left: 0px;
+    }
+    50%{
+        left: 500px;
+    }
+    100%{
+        left: 0px;
+    }
+    
+}
+
+body{
+    background-color: bisque;
+}
+
+button{
+    background-color: brown;
+    color: azure;
+    transition: 1s;
+}
+/* Создаёт второй вариант этой кнопки */
+button:hover{
+    background-color: aqua;
+    color: black;
+    box-shadow: 0px 0px 8px 4px aquamarine;
+    border-radius: 5px;
+}
+
+.box1{
+    margin-top: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    transition: 3s;
+}
+.box1:hover{
+    width: 300px;
+    height: 50px;
+    background-color: rgb(35, 219, 106);
+}
+
+.box2{
+    position: relative;
+    margin-top: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    animation-name:animationBox2;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+
 
 }
 
-ul{
-    list-style: none;
-}
-
-li{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   color: brown;
+.box2:hover{
+animation-play-state: paused;
 }
